# ComfyUI-6yuan

./: .gitignore  LICENSE  __init__.py  pyproject.toml  requirements.txt  海报生成节点开发文档.md
nodes/: color.py  draw_text.py  image.py  layout.py  poster_color_engine.py  poster_logo_placer.py  poster_mask_generator.py  poster_template_loader.py  poster_text_renderer.py  rembg.py  shape_language.py  text_preview.py
